--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/receive_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/receive_component.tsx.j2
@@ -1,7 +1,7 @@
 import React from 'react';
 
 import { State, ReceiveState, SendState, TerminalState } from './EFSM';
-import { ReceiveHandler } from './Session';
+import { MaybePromise, ReceiveHandler } from './Session';
 
 {% for type in endpoint.types -%}
 import { {{ type.external ~ ((' as ' ~ type.alias) if type.external != type.alias else '') }} } from "{{ type.path }}";
@@ -41,26 +41,37 @@ export default abstract class S{{ state.id }}<
     this.props.register(this.handle.bind(this));
   }
 
-  handle(message: any): State {
+  handle(message: any): MaybePromise<State> {
     const parsedMessage = JSON.parse(message) as Message;
     switch (parsedMessage.label) {
       {% for action in state.actions -%}
       case Labels.{{ action.label }}: {
-        this.{{ action.label }}(...parsedMessage.payload);
-        {% if endpoint.efsm.is_send_state(action.succ) -%}
-        return SendState.S{{ action.succ }};
-        {% elif endpoint.efsm.is_receive_state(action.succ) -%}
-        return ReceiveState.S{{ action.succ }};
-        {% else -%}
-        return TerminalState.S{{ action.succ }};
-        {% endif -%}
+        const thunk = () =>
+          {%- if endpoint.efsm.is_send_state(action.succ) -%}
+          SendState.S{{ action.succ }};
+          {%- elif endpoint.efsm.is_receive_state(action.succ) -%}
+          ReceiveState.S{{ action.succ }};
+          {%- else -%}
+          TerminalState.S{{ action.succ }};
+          {%- endif %}
+
+        const continuation = this.{{ action.label }}(...parsedMessage.payload);
+        if (continuation instanceof Promise) {
+          return new Promise((resolve, reject) => {
+            continuation.then(() => {
+              resolve(thunk());
+            }).catch(reject);
+          })
+        } else {
+          return thunk();
+        }
       }
       {%- endfor %}
     }
   }
 
   {% for action in state.actions -%}
-  abstract {{ action.label }}({%- for payload in action.payloads -%}{{ 'payload' ~ loop.index ~ ': ' ~ payload ~ ', ' }}{%- endfor -%}): void;
+  abstract {{ action.label }}({%- for payload in action.payloads -%}{{ 'payload' ~ loop.index ~ ': ' ~ payload ~ ', ' }}{%- endfor -%}): MaybePromise<void>;
   {%- endfor %}
 
 }
