--- a/mpst_ts/codegen/generator/node/node_v3/templates/efsm.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v3/templates/efsm.ts.j2
@@ -61,9 +61,9 @@ namespace Message {
 export namespace Handler {
   {% for state in endpoint.efsm.send_states -%}
   export type S{{ state }} =
-    {% for action in state.actions -%}
-    | MaybePromise<[Labels.S{{ state }}.{{ action.label }}, Message.S{{ state ~ action.label }}['payload'], Implementation.S{{ action.succ }}]>
-    {%- endfor %};
+    MaybePromise<{% for action in state.actions -%}
+    | [Labels.S{{ state }}.{{ action.label }}, Message.S{{ state ~ action.label }}['payload'], Implementation.S{{ action.succ }}]
+    {%- endfor %}>;
   {% endfor %}
   {% for state in endpoint.efsm.receive_states -%}
   export type S{{ state }} = {
@@ -155,6 +155,9 @@ export namespace Implementation {
             return;
           }
           {% endfor %}
+          default: {
+            throw new Error(`Unexpected receive: ${parsedMessage.label}`);
+          }
         }
       }
 
