Fix logic with managing cancellation during session join

--- a/mpst_ts/codegen/generator/node/node_v3/templates/runtime.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v3/templates/runtime.ts.j2
@@ -79,6 +79,9 @@ export class {{ endpoint.role }}
       }
 
       this.roleToSocket[role] = socket;
+
+      socketToRole.set(socket, role);
+      
       this.waiting.delete(role);
       
       socket.removeAllListeners();
