--- a/mpst_ts/codegen/generator/node/node_v3/templates/runtime.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v3/templates/runtime.ts.j2
@@ -55,12 +55,15 @@ export class {{ endpoint.role }}
 
     const socketToRole = new Map<WebSocket, Roles>();
 
+    // Handle event of socket closing when waiting for
+    // other participants.
     const onClose = (event: WebSocket.CloseEvent) => {
       const { target: socket } = event;
       socket.removeAllListeners();
 
       const role = socketToRole.get(socket);
       if (role !== undefined) {
+        // Wait for this role again
         this.waiting.add(role);
       }
     }
@@ -83,17 +86,8 @@ export class {{ endpoint.role }}
       socketToRole.set(socket, role);
 
       this.waiting.delete(role);
-      
-      socket.removeAllListeners();
 
       if (this.waiting.size === 0) {
-        this.wss.removeListener('connection', onConnection);
-        for (const socket of Object.values(this.roleToSocket)) {
-          socket?.send(JSON.stringify({
-            connected: true
-          }));
-        }
-
         // Execute protocol
         new _{{ endpoint.role }}(this.wss, this.roleToSocket as RoleToSocket, cancellation, initialState);
       }
@@ -103,6 +97,9 @@ export class {{ endpoint.role }}
       ws.onmessage = onSubscribe;
       ws.onclose = onClose;
     };
+
+    // Remove previous connection listeners
+    this.wss.removeAllListeners();
     this.wss.addListener('connection', onConnection);
   }
 
@@ -144,13 +141,15 @@ class _{{ endpoint.role }} {
       socket.onmessage = this.receive(role);
 
       socket.onclose = ({ code, reason }) => {
+
+        this.activeRoles.delete(role);
+
         switch (code) {
           case Cancellation.Receive.NORMAL:
             // Normal cancellation
 
             socket.removeAllListeners();
-
-            this.activeRoles.delete(role);
+            
             if (this.activeRoles.size === 0) {
               new {{ endpoint.role }}(this.wss, initialState, this.cancellation);
             }
@@ -168,7 +167,11 @@ class _{{ endpoint.role }} {
             return;
         }
       }
-    })
+
+      socket.send(JSON.stringify({
+        connected: true,
+      }));
+    });
     
     // Initialise queues for receiving.
     this.messageQueue = {
@@ -203,6 +206,7 @@ class _{{ endpoint.role }} {
         }
       }
     } catch (error) {
+      // FIXME: error has type `any`
       this.cancel(error);
     }
   }
@@ -212,7 +216,13 @@ class _{{ endpoint.role }} {
   // ===============
 
   send(to: Roles, label: string, payload: any[], from: string = '{{ endpoint.role }}') {
-    this.roleToSocket[to].send(JSON.stringify({ role: from, label, payload }));
+    this.roleToSocket[to].send(JSON.stringify({ role: from, label, payload }), (error) => {
+      if (error !== undefined) {
+        if (this.activeRoles.has(to)) {
+          throw new Error(`Cannot send to role: ${to}`);
+        }
+      }
+    });
   }
 
   receive(from: Roles) {
@@ -233,6 +243,9 @@ class _{{ endpoint.role }} {
   }
 
   registerMessageHandler(from: Roles, messageHandler: MessageHandler) {
+
+    // FIXME: check if exception thrown here is caught at parent
+
     const message = this.messageQueue[from].shift();
     if (message !== undefined) {
       messageHandler(message);
@@ -241,38 +254,40 @@ class _{{ endpoint.role }} {
     }
   }
 
-  // FIXME: remove method
-  // terminate() {
-  //   Object.values(this.roleToSocket).forEach(socket => socket.close());
-  //   new {{ endpoint.role }}(this.wss, this.initialState);
-  // }
-
   /**
     * Propagate explicit cancellation to other roles.
     * 
     * @param cancelledRole 
     */
-  propagateCancellation(cancelledRole: Roles, reason?: string) {
-    this.cancellation(cancelledRole, reason);
-
-    Object.entries(this.roleToSocket)
-      .filter(([role, _]) => role !== cancelledRole)
-      .forEach(([_, socket]) => {
-        socket.removeAllListeners();
-        socket.close(Cancellation.Emit.LOGICAL_ERROR, JSON.stringify({ role: cancelledRole, reason }))
-      });
-    
-    new {{ endpoint.role }}(this.wss, this.initialState, this.cancellation);
+  propagateCancellation(cancelledRole: Roles, reason?: any) {
+    try {
+      this.cancellation(cancelledRole, reason);
+    } finally {
+      Object.entries(this.roleToSocket)
+        .filter(([role, _]) => role !== cancelledRole)
+        .forEach(([_, socket]) => {
+          socket.removeAllListeners();
+          socket.close(Cancellation.Emit.LOGICAL_ERROR, JSON.stringify({
+            role: cancelledRole,
+            reason: reason instanceof Error ? reason.message : reason,
+          }));
+        });
+      
+      new {{ endpoint.role }}(this.wss, this.initialState, this.cancellation);
+    }
   }
 
-  cancel(reason?: string) {
+  cancel(reason?: any) {
     try {
       this.cancellation('{{ endpoint.role }}', reason);
     } finally {
       Object.values(this.roleToSocket)
         .forEach(socket => {
           socket.removeAllListeners();
-          socket.close(Cancellation.Emit.LOGICAL_ERROR, JSON.stringify({ role: '{{ endpoint.role }}', reason }))
+          socket.close(Cancellation.Emit.LOGICAL_ERROR, JSON.stringify({
+            role: '{{ endpoint.role }}',
+            reason: reason instanceof Error ? reason.message : reason,
+          }));
         });
 
       new {{ endpoint.role }}(this.wss, this.initialState, this.cancellation);
